# rostgis

./: .gitignore  Cargo.toml  README.md  pgrx_gist_cbor_issue.md  rostgis.control  run_integration_tests.sh  run_performance_benchmark.sh  test_spatial_indexing.sh
benches/: enhanced_benchmarks.rs  geometry_benchmarks.rs
benchmark_results/: benchmark_20250623_215455.csv  performance_report_20250623_215455.md
docs/: README.md
docs/api-reference/: SPATIAL_FUNCTIONS.md
docs/developer-guide/: ARCHITECTURE.md  BUILDING.md  CONTRIBUTING.md  GIST_IMPLEMENTATION.md  RSTAR_GEOARROW_INTEGRATION.md  TESTING.md
docs/tutorials/: BASIC_QUERIES.md
docs/user-guide/: GETTING_STARTED.md  INSTALLATION.md  MIGRATION.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_BENCHMARKING.md  SPATIAL_INDEXING.md
pg_regress/expected/: setup.out
sql/: compare_with_postgis.sql  gist_index_setup.sql  performance_benchmark.sql  test_basic_functions.sql  test_gist_production.sql  test_postgis_compatibility.sql  test_spatial_indexing.sql  test_spatial_performance.sql
src/: functions.rs  geometry.rs  lib.rs  spatial_index.rs  utils.rs  vectorized_ops.rs
tests/: integration_tests.rs
