[package]
name = "rostgis"
version = "0.1.0"
edition = "2021"
description = "A PostGIS-compatible PostgreSQL extension written in Rust"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_rostgis"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg13"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
pgrx = "0.15.0"
# Geometry processing libraries
geo = "~0.30"
geo-types = "~0.7"
wkt = "~0.14"
wkb = "~0.9"
geojson = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
byteorder = "1.5"
# Spatial indexing with R*-tree
rstar = "0.12"
# GeoArrow for vectorized operations (stable crates only)
geoarrow-array = "~0.4"
geoarrow-schema = "~0.4"

[dev-dependencies]
pgrx-tests = "0.15.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "geometry_benchmarks"
harness = false

[[bench]]
name = "enhanced_benchmarks"
harness = false

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
